examples/kubernetes/quickstarts/overlays/nginx-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-app
  namespace: quickstarts
  labels:
    app.kubernetes.io/name: echo-app
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "http://heimdall.heimdall.svc.cluster.local:4456/$request_uri"
    nginx.ingress.kubernetes.io/auth-response-headers: "Authorization"
spec:
  ingressClassName: "nginx"
  rules:
    - host: echo-app.local
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: echo-app
                port:
                  number: 8080
